--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^3.26.11",
+    "query-string": "^6.8.3",
+    "rc-pagination": "^1.20.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^1.13.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.53.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
